--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'mainnet:ws://18.167.136.23:26659'
+      ethereum: 'mainnet:wss://exchainws.okex.org:8443'
       RUST_LOG: info
   ipfs:
     image: ipfs/go-ipfs:v0.4.23
